[package]
name = "cheetah"
description = "Implementation of the cheetah STARK-friendly curve"
authors = ["Toposware Developers <dev@toposware.com>"]
homepage = "https://github.com/ToposWare/cheetah"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ToposWare/cheetah"
version = "0.1.0"
edition = "2018"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "curve"]

[dependencies]
bitvec = { version = "0.22", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
group = { version = "0.11", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1", default-features = false }

[features]
default = ["serialize"]
serialize = ["serde"]

[dev-dependencies]
bincode = "1"
criterion = "0.3"

[[bench]]
name = "fp"
harness = false

[[bench]]
name = "fp6"
harness = false

[[bench]]
name = "scalar"
harness = false

[[bench]]
name = "curve_affine"
harness = false

[[bench]]
name = "curve_projective"
harness = false
